fix: handle breakpoints and use dark mode

--- a/styles/bases/variables.scss
+++ b/styles/bases/variables.scss
@@ -24,3 +24,6 @@ $spacing_xl: 4 * $unit;
   --text-color: $text-color;
   --border-color: $border-color;
 }
+
+$bp-tablet: 800px;
+$bp-desktop: 1200px;
